# nakshatra

./: .clang-format  .gitignore  CMakeLists.txt  README.md  UCI_PARITY_PROGRESS.md  install.sh
src/: CMakeLists.txt  SConstruct  attacks.cpp  attacks.h  bitmanip.h  board.cpp  board.h  book.cpp  book.h  build.sh  cmd_interpreter.cpp  cmd_interpreter.h  common.cpp  common.h  compact.h  configure  configure.sh  creation.h  dump_params.cpp  egtb.cpp  egtb.h  egtb_gen.cpp  egtb_gen.h  egtb_gen_main.cpp  egtb_index_gen.cpp  egtb_player.cpp  egtb_util.cpp  egtb_util.h  egtb_util_test.cpp  egtb_validator.cpp  eval.cpp  eval.h  eval_antichess.cpp  eval_antichess.h  eval_normal.cpp  eval_normal.h  eval_standard.cpp  eval_standard.h  eval_suicide.cpp  eval_suicide.h  (+66 more)
src/params/: Exp20251229Iter1Epoch71Step45000.h  ExpTempo202502Epoch4Step2000.h  MobilityParamsEpoch13Step8500.h  OrigParams.h  Params20241117Epoch99Step63720.h  PawnStructEpoch100Step63720Final.h  WithKSEpoch16Step9800.h  ZeroParams.h  params.h
src/tests/: attacks_test.cpp  bitmanip_test.cpp  board_test.cpp  eval_standard_test.cpp  eval_test.cpp  executor_test.cpp  fen_test.cpp  move_order_test.cpp  move_test.cpp  movegen_test.cpp  pawns_test.cpp  pv_search_test.cpp  search_algorithm_test.cpp  see_test.cpp  transpos_test.cpp  uci_test.cpp
src/tools/: compete.py  play.sh  xboard_compete.sh
src/tuning/: layer.h  mlp.h  module.h  neuron.h  parameters.h  tune.cpp  variable.h
